# Aria_IGS

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  Discussions_feedback.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.mcp  Dockerfile.pipelines  alembic.ini  docker-compose.yml  test_rag.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: main.py  requirements.txt
api/tools/: agent_tools.py  error_patterns.py  file_reader.py  resource_estimator.py  slurm_ssh.py
app/: streamlit_app.py
archive/: entrypoint.sh  requirements.txt
archive/app/: streamlit_app.py
aria-cli/: aria.py  pyproject.toml  requirements.txt
db/: models.py  session.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Login.css  Login.jsx  api.js
ingest/: add_doc.py  ingest.py
mcp_server/: __main__.py  app.py  auth.py  client.py  config.py  models.py  prompts.py  requirements.txt  resources.py  server.py  slurm_mcp.py  ssh.py  tools.py  utils.py
my_docs/: vllm_evaluation.md
nginx/: default.conf
pipelines/: IGS_Aria.py  igs_rag_pipeline.py  requirements.txt
rag/: query_engine.py
