[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aria-cli"
version = "0.1.0"
description = "Terminal client for the Aria IGS research computing assistant"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
aria = "aria:cli"

[tool.setuptools.packages.find]
where = ["."]
